--- a/python_control flow.ipynb
+++ b/python_control flow.ipynb
@@ -108,7 +108,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "4785d4a5",
+   "id": "01f11c91",
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +136,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "dd900a90",
+   "id": "4a16de42",
    "metadata": {},
    "outputs": [
     {
@@ -159,8 +159,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "6d623e9e",
+   "execution_count": 25,
+   "id": "e7fe7afb",
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +175,19 @@
       " tuple iterartion\n",
       "sanket\n",
       "R\n",
-      "iyer\n"
+      "iyer\n",
+      "\n",
+      " String iteration\n",
+      "S\n",
+      "a\n",
+      "n\n",
+      "k\n",
+      "e\n",
+      "t\n",
+      "\n",
+      " Dictionary Iteration\n",
+      "xyz 123\n",
+      "abc 345\n"
      ]
     }
    ],
@@ -190,13 +202,25 @@
     "t = (\"sanket\",\"R\",\"iyer\")\n",
     "for i in t:\n",
     "    print(i)\n",
+    "\n",
+    "print(\"\\n String iteration\")\n",
+    "s =\"Sanket\"\n",
+    "for i in s:\n",
+    "    print(i)\n",
+    "    \n",
+    "print(\"\\n Dictionary Iteration\")\n",
+    "d = dict()\n",
+    "d['xyz']= 123\n",
+    "d['abc']= 345\n",
+    "for i in d:\n",
+    "    print(\"%s %d\" %(i,d[i]))\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "80b452a8",
+   "id": "f89f4d72",
    "metadata": {},
    "outputs": [],
    "source": []
