--- a/python_Datatypes.ipynb
+++ b/python_Datatypes.ipynb
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 5,
    "id": "88a984d7",
    "metadata": {},
    "outputs": [
@@ -109,12 +109,14 @@
       "Hello\n",
       "hello 5\n",
       "Hello 5\n",
-      "Hello 5\n"
+      "Hello 5\n",
+      "hello 5\n"
      ]
     }
    ],
    "source": [
     "a = 5\n",
+    "b = 10\n",
     "print(a)\n",
     "print(\"Hello\")\n",
     "\n",
@@ -123,7 +125,9 @@
     "#o print a variable and a string in Python using formatting{.format()}\n",
     "print(\"Hello {}\".format(a))\n",
     "#to print a variable and a string in Python using f-strings\n",
-    "print(f\"Hello {a}\")"
+    "print(f\"Hello {a}\")\n",
+    "# to print a variable and a string in python usinf %\n",
+    "print(\"hello %d\"%a)"
    ]
   },
   {
