--- a/control flow/python_control flow.ipynb
+++ b/control flow/python_control flow.ipynb
@@ -246,7 +246,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "70bc52bf",
+   "id": "2641b515",
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +274,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "6e4c24b7",
+   "id": "640d5760",
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +312,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "f6f9654e",
+   "id": "5f6ef9f3",
    "metadata": {},
    "outputs": [
     {
@@ -349,7 +349,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "c39e3ebd",
+   "id": "718fe570",
    "metadata": {},
    "outputs": [
     {
@@ -379,7 +379,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "f744b897",
+   "id": "e305a8a6",
    "metadata": {},
    "outputs": [
     {
@@ -404,7 +404,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "2ab25551",
+   "id": "9e2659df",
    "metadata": {},
    "outputs": [
     {
@@ -428,7 +428,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "3193e336",
+   "id": "0d9c1b65",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -438,7 +438,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "69a5057a",
+   "id": "cf935f7e",
    "metadata": {},
    "outputs": [
     {
@@ -453,17 +453,22 @@
     }
    ],
    "source": [
+    "# outer loop to handle number of rows\n",
+    "# n in this case\n",
     "for i in range(4):\n",
+    "# inner loop to handle number of columns\n",
+    "# values changing acc. to outer loop\n",
     "    for j in range(i+1):\n",
+    "# printing stars\n",
     "        print(\"*\",end=\" \")\n",
-    "    \n",
-    "    print()"
+    "# ending line after each row   \n",
+    "    print(\"\\r\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "01516e32",
+   "id": "c788d57e",
    "metadata": {},
    "outputs": [
     {
@@ -482,13 +487,13 @@
     "    for j in range(4-i):\n",
     "        print(\"*\",end=\" \")\n",
     "    \n",
-    "    print()"
+    "    print(\"\\r\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "27055c00",
+   "id": "58c75b46",
    "metadata": {},
    "outputs": [
     {
@@ -506,13 +511,13 @@
     "for i in range(4):\n",
     "    for j in range(4):\n",
     "        print(\"*\",end=\"\")\n",
-    "    print('')"
+    "    print(\"\\r\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "dce9285e",
+   "id": "4b610da3",
    "metadata": {},
    "outputs": [
     {
@@ -539,7 +544,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "265fa5b1",
+   "id": "369f70ed",
    "metadata": {},
    "outputs": [
     {
@@ -564,7 +569,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "7841f265",
+   "id": "b69e59c2",
    "metadata": {},
    "outputs": [
     {
@@ -591,7 +596,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "ac5c6ef6",
+   "id": "3da6294b",
    "metadata": {},
    "outputs": [
     {
@@ -615,7 +620,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "a8d4a680",
+   "id": "da3e049f",
    "metadata": {},
    "outputs": [
     {
@@ -640,7 +645,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "24a7ccca",
+   "id": "db8eed45",
    "metadata": {},
    "outputs": [
     {
@@ -663,8 +668,363 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 59,
+   "id": "2e436ad2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " The key value pair using iteritems is: \n",
+      "a apple\n",
+      "b ball\n"
+     ]
+    }
+   ],
+   "source": [
+    "d = {\"a\":\"apple\", \"b\":\"ball\"}\n",
+    "\n",
+    "#using items to print the dictionary key-value pair\n",
+    "print(\" The key value pair using iteritems is: \")\n",
+    "for i,j in d.items():\n",
+    "    print(i,j)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "fada1954",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True 10\n",
+      "False\n",
+      "True\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Python code to illustrate\n",
+    "# chaining comparison operators\n",
+    "x = 5\n",
+    "print(1<x,10)\n",
+    "print(10<x<20)\n",
+    "print(x<10<x*10<100)\n",
+    "print(10>x<=9)\n",
+    "print(5 == x>4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "9966ae69",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "spameggsbeans\n",
+      "spam\n",
+      "eggs\n",
+      "beans\n",
+      "spam, eggs, beans\n",
+      "spam\n",
+      "eggs\n",
+      "beans\n"
+     ]
+    }
+   ],
+   "source": [
+    "meal1 = \"spam\" + \"eggs\" + \"beans\"\n",
+    "meal2 = \"spam\\neggs\\nbeans\"\n",
+    "meal3 = \"spam, eggs, beans\"\n",
+    "meal4 = \"\"\"spam\n",
+    "eggs\n",
+    "beans\"\"\"\n",
+    "print(meal1)\n",
+    "print(meal2)\n",
+    "print(meal3)\n",
+    "print(meal4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "ddc9c8a9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "40.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 45\n",
+    "b = 15\n",
+    "c = 3\n",
+    " \n",
+    "print(a - b / c)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "4544dc21",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MTWTFSS\n"
+     ]
+    }
+   ],
+   "source": [
+    "days = \"Mon, Tue, Wed, Thu, Fri, Sat, Sun\"\n",
+    "print(days[::5])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "f90ec6f7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "flower = \"blue violet\" \n",
+    "print(flower=='blue')\n",
+    "print('blue' in flower)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "83960966",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Please guess the number between 1 nad 10: \n",
+      "3\n",
+      "please guess higher\n",
+      "4\n",
+      "sorry you guessed incorrectly\n"
+     ]
+    }
+   ],
+   "source": [
+    "answer = 5\n",
+    "\n",
+    "print(\"Please guess the number between 1 nad 10: \")\n",
+    "guess = int(input())\n",
+    "\n",
+    "if guess<answer:\n",
+    "    print(\"please guess higher\")\n",
+    "    guess = int(input())\n",
+    "    if guess == answer:\n",
+    "        print(\"Well done, you guessws it\")\n",
+    "    else:\n",
+    "        print(\"sorry you guessed incorrectly\")\n",
+    "elif guess>answer:\n",
+    "    print(\"Please guess lower\")\n",
+    "    guess = int(input())\n",
+    "    if guess == answer:\n",
+    "        print(\"well done\")\n",
+    "    else:\n",
+    "        print(\"sorry you guessed incorrectly\")\n",
+    "else:\n",
+    "    print(\"you got it first time\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "a82d8af4",
+   "id": "594ddff4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "answer = 5\n",
+    "\n",
+    "print(\"Please guess number between 1 and 10: \")\n",
+    "guess = int(input())\n",
+    "\n",
+    "if guess != answer:\n",
+    "    if guess < answer:\n",
+    "        print(\"Please guess higher\")\n",
+    "    else:   # guess must be greater than answer\n",
+    "        print(\"Please guess lower\")\n",
+    "    guess = int(input())\n",
+    "    if guess == answer:\n",
+    "        print(\"Well done, you guessed it\")\n",
+    "    else:\n",
+    "        print(\"Sorry, you have not guessed correctly\")\n",
+    "else:\n",
+    "    print(\"You got it first time\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "6afa6c39",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Please guess number between 1 and 10: \n",
+      "3\n",
+      "Please guess higher\n",
+      "4\n",
+      "Sorry, you have not guessed correctly\n"
+     ]
+    }
+   ],
+   "source": [
+    "answer = 5\n",
+    "\n",
+    "print(\"Please guess number between 1 and 10: \")\n",
+    "guess = int(input())\n",
+    "\n",
+    "if guess == answer:\n",
+    "    print(\"You got it first time\")\n",
+    "else:\n",
+    "    if guess < answer:\n",
+    "        print(\"Please guess higher\")\n",
+    "    else:   # guess must be greater than answer\n",
+    "        print(\"Please guess lower\")\n",
+    "    guess = int(input())\n",
+    "    if guess == answer:\n",
+    "        print(\"Well done, you guessed it\")\n",
+    "    else:\n",
+    "        print(\"Sorry, you have not guessed correctly\")\n",
+    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "6664e725",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "how old are you: 12\n"
+     ]
+    }
+   ],
+   "source": [
+    "age = int(input(\"how old are you: \"))\n",
+    "\n",
+    "if age>=16 and age <= 65:\n",
+    "    print(\"have great day\")\n",
+    "else:\n",
+    "    print(\"good day\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "c5dfd47a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import defaultdict\n",
+    "d = defaultdict()\n",
+    "  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "000b13b5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d['a']='xyz'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "id": "98f905ab",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defaultdict(None, {'a': 'xyz'})"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "id": "f07591d7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d['b']='qwe'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "id": "001353c5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defaultdict(None, {'a': 'xyz', 'b': 'qwe'})"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6a38cdd9",
    "metadata": {},
    "outputs": [],
    "source": []
