--- a/python practice/python_exercise.ipynb
+++ b/python practice/python_exercise.ipynb
@@ -29,7 +29,11 @@
    "id": "08f7bd91",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "r = float(input(\"Enter the radius:\"))\n",
+    "a = 3.14*r*r\n",
+    "print(\"Area of the circle:\",a)"
+   ]
   }
  ],
  "metadata": {
