oops and polymorphism

--- a/python practice/python_exercise.ipynb
+++ b/python practice/python_exercise.ipynb
@@ -763,8 +763,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "de21ea5d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the first no.: 3\n",
+      "Enter the second no.: 3\n",
+      "3 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = int(input(\"Enter the first no.: \"))\n",
+    "b = int(input(\"Enter the second no.: \"))\n",
+    "print(a,b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "894e0e4d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "my**Name**is**Sanket\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('my','Name','is','Sanket',sep='**')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "344ea9ce",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "num = 8\n",
+    "print('%o' % num)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "2ebe958d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "458.54\n"
+     ]
+    }
+   ],
+   "source": [
+    "num = 458.541315\n",
+    "print('%.2f'% num)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b19670f9",
    "metadata": {},
    "outputs": [],
    "source": []
