--- a/oops/python_oop.ipynb
+++ b/oops/python_oop.ipynb
@@ -1283,7 +1283,7 @@
     "     \n",
     "    @abstractmethod\n",
     "    def speed(self):\n",
-    "        pass\n",
+    "        pass \n",
     "    \n",
     "class maruti(Car):\n",
     "    def speed(self):\n",
@@ -1304,8 +1304,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "8f73601c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "def topten():\n",
+    "    \n",
+    "    yield 1\n",
+    "    yield 2\n",
+    "    yield 3\n",
+    "    yield 4\n",
+    "    yield 5\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "values = topten()\n",
+    "\n",
+    "# print(values.__next__())\n",
+    "# print(values.__next__())\n",
+    "\n",
+    "for i in values:\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "47195b74",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "One piece is a shonen\n",
+      "Deathnote is a psychological thriller\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Abstract classs\n",
+    "from abc import ABC,abstractmethod\n",
+    "\n",
+    "class Anime(ABC):\n",
+    "    @abstractmethod\n",
+    "    def Type_of_anime(self):\n",
+    "        pass\n",
+    "    \n",
+    "class onepiece(Anime):\n",
+    "    \n",
+    "    def Type_of_anime(self):\n",
+    "        print(\"One piece is a shonen\")\n",
+    "        \n",
+    "class Deathnote(Anime):\n",
+    "    \n",
+    "    def Type_of_anime(self):\n",
+    "        print(\"Deathnote is a psychological thriller\")\n",
+    "        \n",
+    "\n",
+    "obj1 = onepiece()\n",
+    "obj2 = Deathnote()\n",
+    "\n",
+    "obj1.Type_of_anime()\n",
+    "obj2.Type_of_anime()\n",
+    "\n",
+    "        \n",
+    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d7890040",
    "metadata": {},
    "outputs": [],
    "source": []
