--- a/python practice/python_exercise.ipynb
+++ b/python practice/python_exercise.ipynb
@@ -841,8 +841,125 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "b19670f9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "i =1\n",
+    "while i<=10:\n",
+    "    print(i)\n",
+    "    \n",
+    "    i +=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "7534fba1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "maJ\n"
+     ]
+    }
+   ],
+   "source": [
+    "var= \"James Bond\"\n",
+    "print(var[2::-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "bc225a61",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "182.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 36 / 4 * (3 +  2) * 4 + 2\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "457adf91",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "listOne = [20, 40, 60, 80]\n",
+    "listTwo = [20, 40, 60, 80]\n",
+    "\n",
+    "print(listOne == listTwo)\n",
+    "print(listOne is listTwo)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "b457fbb7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "this is else block statement\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(1, 5):\n",
+    "    print(i)\n",
+    "else:\n",
+    "    print(\"this is else block statement\" )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "331221bd",
    "metadata": {},
    "outputs": [],
    "source": []
