--- a/python practice/python_exercise.ipynb
+++ b/python practice/python_exercise.ipynb
@@ -892,7 +892,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "bc225a61",
+   "id": "82a73c61",
    "metadata": {},
    "outputs": [
     {
@@ -911,7 +911,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "457adf91",
+   "id": "b8f14b58",
    "metadata": {},
    "outputs": [
     {
@@ -934,7 +934,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "b457fbb7",
+   "id": "39765dc5",
    "metadata": {},
    "outputs": [
     {
@@ -958,8 +958,277 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "0ab18095",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "25\n"
+     ]
+    }
+   ],
+   "source": [
+    " print(int(25.65))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "310e4f32",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10, 0, 30, ['A', 0, 'C']]\n",
+      "[10, 20, 30, ['A', 0, 'C']]\n",
+      "[10, 20, 30, ['A', 'B', 'C']]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import copy\n",
+    "list1 = [10, 20, 30, ['A' , 'B' , 'C']]\n",
+    "list2 = list1.copy()\n",
+    "list3 = copy.deepcopy(list1)\n",
+    "list1[3][1] = 0000\n",
+    "list1[1] = 0000\n",
+    "print(list1) \n",
+    "print(list2)\n",
+    "print(list3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "6ab45549",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n",
+      "True\n",
+      "False\n",
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(not('False'))\n",
+    "print(not(0))\n",
+    "print(not(''))\n",
+    "print(not(' '))\n",
+    "print(not([\"Python\"]))\n",
+    "print(not([]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "c0a0c828",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(2^2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "22543251",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "__init__() should return None, not 'int'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[6], line 5\u001b[0m\n\u001b[0;32m      2\u001b[0m   \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__init__\u001b[39m(\u001b[38;5;28mself\u001b[39m , var):\n\u001b[0;32m      3\u001b[0m          \u001b[38;5;28;01mreturn\u001b[39;00m var\n\u001b[1;32m----> 5\u001b[0m obj \u001b[38;5;241m=\u001b[39m \u001b[43mClass_A\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m20\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28mprint\u001b[39m(obj)\n",
+      "\u001b[1;31mTypeError\u001b[0m: __init__() should return None, not 'int'"
+     ]
+    }
+   ],
+   "source": [
+    "class Class_A:\n",
+    "  def __init__(self , var):\n",
+    "         return var\n",
+    " \n",
+    "obj = Class_A(20)\n",
+    "print(obj)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "8eb7159a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "27\n",
+      "17\n",
+      "34\n",
+      "22\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Calculate:\n",
+    "  var1=20\n",
+    "  def __init__(self,var1):\n",
+    "      self.var1 = var1\n",
+    "      self.var1 = self.var1 + 7\n",
+    "      Calculate.var1 = Calculate.var1 + 7\n",
+    "      \n",
+    "  def Print(self):\n",
+    "       print(Calculate.var1)\n",
+    "       print(self.var1)\n",
+    "  \n",
+    "Calculate(10).Print()\n",
+    "Calculate(15).Print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "3e5118df",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tuple[3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(tuple[3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "2e9bcb9f",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "name 'x' is parameter and global (4058986942.py, line 5)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[9], line 5\u001b[1;36m\u001b[0m\n\u001b[1;33m    global x\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m name 'x' is parameter and global\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 45\n",
+    "y = 25\n",
+    " \n",
+    "def Sum(x):\n",
+    "  global x\n",
+    "  print(\"Sum inside Sum() :\",x+y)\n",
+    "  \n",
+    "Sum(25) \n",
+    "print(\"Sum outside Sum() :\",x+y)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "e48a962a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5, 15, '5', '15', 'Python']\n"
+     ]
+    }
+   ],
+   "source": [
+    "D = {5 : 5, 15 : '15', '5' : 5, '15' : 25} \n",
+    "D[str(15)] = 100\n",
+    "L = list(D)\n",
+    "L.append(\"Python\")\n",
+    "print(L)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "11256e0c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(0x3 | 0x9)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "dfd6ccbf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0-1.5-3.0-"
+     ]
+    }
+   ],
+   "source": [
+    "i = 0\n",
+    "while i < 4: \n",
+    "    print(i , end = \"-\") \n",
+    "    i += 1.5\n",
+    "    if((i < 4) == False):\n",
+    "        break\n",
+    "else: \n",
+    "    print(0 , end = \" \")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "331221bd",
+   "id": "cdc02c0a",
    "metadata": {},
    "outputs": [],
    "source": []
