--- a/python practice/python_exercise.ipynb
+++ b/python practice/python_exercise.ipynb
@@ -1,20 +1,17 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "02f4349f",
+   "cell_type": "markdown",
+   "id": "425286f0",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Current date and time: \n",
-      "2023-02-06 10:35:20\n"
-     ]
-    }
-   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "96472333",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "#print current date and time\n",
     "import datetime as d\n",
@@ -1529,13 +1526,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 1,
    "id": "4d61886e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "int"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "a= '0.1'\n",
-    "i = int(float(a))"
+    "i = int(float(a))\n",
+    "type(i)"
    ]
   },
   {
@@ -1611,8 +1620,110 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "dbec8c03",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(True<False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "beab3588",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3, 2, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "list1 =[0,1,2,3,4]\n",
+    "list1[0],list1[4] = list1[4],list1[0]\n",
+    "list1[1],list1[3] = list1[3],list1[1]\n",
+    "list1 = list1[1:-1]\n",
+    "print(list1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "5c1f3d31",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'AA': 'Apple'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "Dict ={\"AA\":\"book\"}\n",
+    "Dict['AA'] ='Apple'\n",
+    "print(Dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "4fb0dc95",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "a ='5.23'\n",
+    "f =float(a)\n",
+    "# print(f)\n",
+    "i =int(float(a))\n",
+    "print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "3303692e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello 5 10\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 5\n",
+    "b= 10\n",
+    "print(f\"hello {a} {b}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "985c8642",
    "metadata": {},
    "outputs": [],
    "source": []
