--- a/oops/python_oop.ipynb
+++ b/oops/python_oop.ipynb
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 5,
    "id": "7340bf6e",
    "metadata": {},
    "outputs": [
@@ -143,6 +143,7 @@
     "            return True\n",
     "        else:\n",
     "            return False\n",
+    "    \n",
     "    \n",
     "c1 = computer()\n",
     "c2 = computer()\n",
@@ -504,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "id": "f6c0f45a",
    "metadata": {},
    "outputs": [
@@ -790,6 +791,7 @@
     }
    ],
    "source": [
+    "#filter\n",
     "lst1=[1,2,3,4,5,6,7,8,9,10]\n",
     "def even(n):\n",
     "    list2= []\n",
@@ -799,13 +801,7 @@
     "    return list2\n",
     "            \n",
     "list2 = even(lst1)\n",
-    "print(list2)\n",
-    "        \n",
-    "        \n",
-    "\n",
-    "\n",
-    "\n",
-    "    "
+    "print(list2)"
    ]
   },
   {
@@ -1392,8 +1388,106 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "dea8e5f5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "| | | |\n",
+      "| | | |\n",
+      "| | | |\n",
+      "Your turn player 1\n",
+      "Enter your move (1-9): 1\n",
+      "Your turn player 2\n",
+      "Enter your move (1-9): 2\n",
+      "|X|O| |\n",
+      "| | | |\n",
+      "| | | |\n",
+      "Your turn player 1\n",
+      "Enter your move (1-9): 4\n",
+      "Your turn player 2\n",
+      "Enter your move (1-9): 9\n",
+      "|X|O| |\n",
+      "|X| | |\n",
+      "| | |O|\n",
+      "Your turn player 1\n",
+      "Enter your move (1-9): 7\n",
+      "|X|O| |\n",
+      "|X| | |\n",
+      "|X| |O|\n",
+      "X Wins! Congratulations!\n"
+     ]
+    }
+   ],
+   "source": [
+    "#tic-tac-toe game\n",
+    "board = [' ' for x in range(9)]\n",
+    "\n",
+    "def print_board():\n",
+    "    row1 = '|{}|{}|{}|'.format(board[0], board[1], board[2])\n",
+    "    row2 = '|{}|{}|{}|'.format(board[3], board[4], board[5])\n",
+    "    row3 = '|{}|{}|{}|'.format(board[6], board[7], board[8])\n",
+    "    print(row1)\n",
+    "    print(row2)\n",
+    "    print(row3)\n",
+    "\n",
+    "def player_move(icon):\n",
+    "    if icon == 'X':\n",
+    "        number = 1\n",
+    "    elif icon == 'O':\n",
+    "        number = 2\n",
+    "\n",
+    "    print('Your turn player {}'.format(number))\n",
+    "    choice = int(input('Enter your move (1-9): ').strip())\n",
+    "    if board[choice-1] == ' ':\n",
+    "        board[choice-1] = icon\n",
+    "    else:\n",
+    "        print('That space is taken!')\n",
+    "\n",
+    "def is_victory(icon):\n",
+    "    if (board[0] == icon and board[1] == icon and board[2] == icon) or \\\n",
+    "       (board[3] == icon and board[4] == icon and board[5] == icon) or \\\n",
+    "       (board[6] == icon and board[7] == icon and board[8] == icon) or \\\n",
+    "       (board[0] == icon and board[3] == icon and board[6] == icon) or \\\n",
+    "       (board[1] == icon and board[4] == icon and board[7] == icon) or \\\n",
+    "       (board[2] == icon and board[5] == icon and board[8] == icon) or \\\n",
+    "       (board[0] == icon and board[4] == icon and board[8] == icon) or \\\n",
+    "       (board[2] == icon and board[4] == icon and board[6] == icon):\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False\n",
+    "\n",
+    "def is_draw():\n",
+    "    if ' ' not in board:\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False\n",
+    "\n",
+    "while True:\n",
+    "    print_board()\n",
+    "    player_move('X')\n",
+    "    if is_victory('X'):\n",
+    "        print_board()\n",
+    "        print('X Wins! Congratulations!')\n",
+    "        break\n",
+    "    elif is_draw():\n",
+    "        print_board()\n",
+    "        print('It\\'s a draw!')\n",
+    "        break\n",
+    "    player_move('O')\n",
+    "    if is_victory('O'):\n",
+    "        print_board()\n",
+    "        print('O Wins! Congratulations!')\n",
+    "        break\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9c7e2e49",
    "metadata": {},
    "outputs": [],
    "source": []
