--- a/control flow/python_control flow.ipynb
+++ b/control flow/python_control flow.ipynb
@@ -1030,11 +1030,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "6a38cdd9",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "too many values to unpack (expected 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[6], line 4\u001b[0m\n\u001b[0;32m      1\u001b[0m lst1 \u001b[38;5;241m=\u001b[39m[\u001b[38;5;241m1\u001b[39m,\u001b[38;5;241m2\u001b[39m,\u001b[38;5;241m3\u001b[39m,\u001b[38;5;241m4\u001b[39m,\u001b[38;5;241m5\u001b[39m]\n\u001b[0;32m      2\u001b[0m lst2 \u001b[38;5;241m=\u001b[39m[\u001b[38;5;241m6\u001b[39m,\u001b[38;5;241m7\u001b[39m,\u001b[38;5;241m8\u001b[39m,\u001b[38;5;241m9\u001b[39m,\u001b[38;5;241m10\u001b[39m]\n\u001b[1;32m----> 4\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i,j \u001b[38;5;129;01min\u001b[39;00m lst1,lst2:\n\u001b[0;32m      5\u001b[0m     \u001b[38;5;28mprint\u001b[39m(i,j)\n\u001b[0;32m      6\u001b[0m \u001b[38;5;66;03m#     if lst1[i]<lst2[j]:\u001b[39;00m\n\u001b[0;32m      7\u001b[0m \u001b[38;5;66;03m#         print(lst2[i],lst1[i])\u001b[39;00m\n",
+      "\u001b[1;31mValueError\u001b[0m: too many values to unpack (expected 2)"
+     ]
+    }
+   ],
+   "source": [
+    "lst1 =[1,2,3,4,5]\n",
+    "lst2 =[6,7,8,9,10]\n",
+    "\n",
+    "for i,j in lst1,lst2:\n",
+    "    print(i,j)\n",
+    "#     if lst1[i]<lst2[j]:\n",
+    "#         print(lst2[i],lst1[i])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a2806fe6",
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "41ded38f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    " "
+   ]
   }
  ],
  "metadata": {
