--- a/python practice/python_exercise.ipynb
+++ b/python practice/python_exercise.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "425286f0",
+   "id": "2c6313aa",
    "metadata": {},
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "96472333",
+   "id": "948a222d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1639,7 +1639,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "beab3588",
+   "id": "abfd0176",
    "metadata": {},
    "outputs": [
     {
@@ -1661,7 +1661,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "5c1f3d31",
+   "id": "5ebdd9a9",
    "metadata": {},
    "outputs": [
     {
@@ -1681,7 +1681,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "4fb0dc95",
+   "id": "5589e85e",
    "metadata": {},
    "outputs": [
     {
@@ -1703,7 +1703,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "3303692e",
+   "id": "e1dd1603",
    "metadata": {},
    "outputs": [
     {
@@ -1717,13 +1717,370 @@
    "source": [
     "a = 5\n",
     "b= 10\n",
-    "print(f\"hello {a} {b}\")"
+    "print(f\"hello {a} {b}\")txt = \"We are the so-called \\\"Vikings\\\" from the north.\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "507a9379",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "We are the so-called \"Vikings\" from the north.\n"
+     ]
+    }
+   ],
+   "source": [
+    "txt = \"We are the so-called \\\"Vikings\\\" from the north.\"\n",
+    "print(txt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "15f52f5d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[6, 1, 7, 2, 8, 3, 9, 4, 10, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Python3 program to merge two lists\n",
+    "# alternatively\n",
+    "\n",
+    "def countList(lst1, lst2):\n",
+    "    return [sub[item] for item in range(len(lst2))\n",
+    "                    for sub in [lst2, lst1]]\n",
+    "\n",
+    "# Driver code\n",
+    "lst1 = [1, 2, 3,4,5]\n",
+    "lst2 = [6,7,8,9,10]\n",
+    "print(countList(lst1, lst2))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "cdc391b4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 'a', 2, 'b', 3, 'c']\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "def countList(lst1, lst2):\n",
+    "    return [item for pair in zip(lst1, lst2 + [0])for item in pair]\n",
+    "\n",
+    "lst1 = [1, 2, 3]\n",
+    "lst2 = ['a', 'b', 'c']\n",
+    "print(countList(lst1, lst2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "dbe91d33",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 'a', 2, 'b', 3, 'c')\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Python3 program to merge two lists\n",
+    "# alternatively\n",
+    "import operator\n",
+    "from functools import reduce\n",
+    "\n",
+    "def countList(lst1, lst2):\n",
+    "    return reduce(operator.add, zip(lst1, lst2))\n",
+    "\n",
+    "# Driver code\n",
+    "lst1 = [1, 2, 3]\n",
+    "lst2 = ['a', 'b', 'c']\n",
+    "print(countList(lst1, lst2))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "e26ac82f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(1, 6), (2, 7), (3, 8), (4, 9), (5, 10)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "lst1 = [1, 2, 3,4,5]\n",
+    "lst2 = [6,7,8,9,10]\n",
+    "x = zip(lst1,lst2)\n",
+    "print(list(x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "5eee79cd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Indices and value in list:\n",
+      "(0, 1)\n",
+      "(1, 2)\n",
+      "(2, 3)\n",
+      "(3, 4)\n",
+      "(4, 5)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# create a list of subjects\n",
+    "lst1 = [1, 2, 3, 4, 5]\n",
+    "\n",
+    "print(\"Indices and value in list:\")\n",
+    "# get the indices and values using enumerate method\n",
+    "for i in enumerate(lst1):\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "e6d82572",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "index and values in list:\n",
+      "[(1, 6), (2, 7), (3, 8), (4, 9), (5, 10)]\n",
+      "[(1, 6), (2, 7), (3, 8), (4, 9), (5, 10)]\n",
+      "[(1, 6), (2, 7), (3, 8), (4, 9), (5, 10)]\n",
+      "[(1, 6), (2, 7), (3, 8), (4, 9), (5, 10)]\n",
+      "[(1, 6), (2, 7), (3, 8), (4, 9), (5, 10)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# create a index list that stores list\n",
+    "indexlist = [1, 2, 3, 4,5]\n",
+    "\n",
+    "# create a list of subjects\n",
+    "data = [6,7,8,9,10]\n",
+    "\n",
+    "\n",
+    "print(\"index and values in list:\")\n",
+    "\n",
+    "# get the values from indices using zip method\n",
+    "for index, value in zip(indexlist, data):\n",
+    "    a =zip(indexlist, data)\n",
+    "    print(list(a))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "0a89d41a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n"
+     ]
+    }
+   ],
+   "source": [
+    "lst1 = [1, 2, 3,4,5]\n",
+    "lst2 = [6,7,8,9,10]\n",
+    "lst3 = []\n",
+    "for i in range(len(lst1),len(lst2)):\n",
+    "    \n",
+    "\n",
+    "print(lst3)\n",
+    "# x = zip(lst1,lst2)\n",
+    "# print(list(x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "8aac0b13",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "lst1 = [1, 2, 3,4,5]\n",
+    "print(lst1[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "bbafb71d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "index and values in list:\n",
+      "1 6\n",
+      "2 7\n",
+      "3 8\n",
+      "4 9\n",
+      "5 10\n",
+      "[1, 6, 2, 7, 3, 8, 4, 9, 5, 10]\n"
+     ]
+    }
+   ],
+   "source": [
+    "l1 = [1, 2, 3, 4,5]\n",
+    "l2 = [6,7,8,9,10]\n",
+    "l3 = []\n",
+    "# [1,6,2,7,3,8,4,9,5,10]\n",
+    "\n",
+    "print(\"index and values in list:\")\n",
+    "for i, j in zip(l1, l2):\n",
+    "    print(i,j)\n",
+    "    l3.append(i)\n",
+    "    l3.append(j)\n",
+    "     \n",
+    "    \n",
+    "print(l3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "21ad5314",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "4\n",
+      "4444\n"
+     ]
+    }
+   ],
+   "source": [
+    "num1 = input()\n",
+    "num2 = int(input())\n",
+    "print(num1*num2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "04e21d82",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sanket Iyer\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Employee:\n",
+    "    \n",
+    "    def __init__(self,first,last,pay):\n",
+    "        self.first = first\n",
+    "        self.last = last\n",
+    "        self.pay = pay\n",
+    "        self.email = first + '.' + last + '@company.com'\n",
+    "        \n",
+    "    def fullname(self):\n",
+    "        return '{} {}'.format(self.first,self.last)\n",
+    "    \n",
+    "emp_1 = Employee('Sanket','Iyer',10000)\n",
+    "emp_2 = Employee('Jay','Patel',10000)\n",
+    "\n",
+    "print(emp_1.fullname())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "3fcaf2d8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10000\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Employee:\n",
+    "    \n",
+    "    def __init__(self,first,last,pay):\n",
+    "        self.first = first\n",
+    "        self.last = last\n",
+    "        self.pay = pay\n",
+    "        self.email = first + '.' + last + '@company.com'\n",
+    "        \n",
+    "    def fullname(self):\n",
+    "        return '{} {}'.format(self.first,self.last)\n",
+    "    \n",
+    "    def apply_raise(self):\n",
+    "        self.pay = int(self.pay + 1.04)\n",
+    "    \n",
+    "emp_1 = Employee('Sanket','Iyer',10000)\n",
+    "emp_2 = Employee('Jay','Patel',10000)\n",
+    "\n",
+    "print(emp_1.pay)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "985c8642",
+   "id": "445ae81e",
    "metadata": {},
    "outputs": [],
    "source": []
